App's starting in docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,22 @@ services:
       - ${POSTGRES_PORT}
     volumes:
       - pg_data:/var/lib/postgresql/data
-    networks:
-      - bank_net
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+
+    environment:
+      DB_SOURCE: "postgresql://user:password@db:5432/bank_system?sslmode=disable"
+
+
+
 
 
 volumes:
